# rstudio

dependencies/common/: install-mathjax
dependencies/windows/: install-dependencies.cmd
package/linux/rpm-script/: postinst.sh.in
src/cpp/conf/: rdesktop-dev.conf  rserver-dev.conf  rsession-dev.conf
src/cpp/core/: CMakeLists.txt
src/cpp/core/dev/: CMakeLists.txt  Main.cpp  TreeMain.cpp
src/cpp/core/include/core/: FileInfo.hpp
src/cpp/core/include/core/collection/: Tree.hpp
src/cpp/core/include/core/system/: FileMonitor.hpp  FileScanner.hpp  PosixSystem.hpp
src/cpp/core/system/: PosixFileScanner.cpp  PosixSystem.cpp  Win32FileScanner.cpp
src/cpp/core/system/file_monitor/: FileMonitor.cpp  FileMonitorImpl.hpp  LinuxFileMonitor.cpp  MacFileMonitor.cpp  Win32FileMonitor.cpp
src/cpp/desktop/: CMakeLists.txt  DesktopApplicationLaunch.cpp  DesktopApplicationLaunch.hpp  DesktopBrowserWindow.cpp  DesktopBrowserWindow.hpp  DesktopGwtCallback.cpp  DesktopGwtCallback.hpp  DesktopMain.cpp  DesktopMainWindow.cpp  DesktopMainWindow.hpp  DesktopOptions.cpp  DesktopPosixApplication.cpp  DesktopPosixApplicationLaunch.cpp  DesktopSessionLauncher.cpp  DesktopSynctex.cpp  DesktopSynctex.hpp  DesktopUtils.cpp  DesktopWebView.cpp  DesktopWebView.hpp  DesktopWin32ApplicationLaunch.cpp
src/cpp/desktop/synctex/evince/: EvinceSynctex.cpp  EvinceSynctex.hpp  EvinceWindow.hpp  EvinceWindow1.cpp  EvinceWindow1.hpp  EvinceWindow2.cpp  EvinceWindow2.hpp  EvinceWindow3.cpp  EvinceWindow3.hpp
src/cpp/r/session/: REmbeddedWin32.cpp
src/cpp/server/: ServerMain.cpp  ServerOptions.cpp  ServerPAMAuth.cpp  ServerSessionManager.cpp  ServerSessionManager.hpp
src/cpp/server/extras/apparmor/: rstudio-server.in
src/cpp/server/include/server/: ServerOptions.hpp
src/cpp/server/include/server/util/system/: System.hpp
src/cpp/server/pam/: CMakeLists.txt  Pam.cpp  Pam.hpp  PamAuthMain.cpp  PamSessionMain.cpp
src/cpp/session/: CMakeLists.txt  SessionMain.cpp  SessionModuleContext.cpp  SessionOptions.cpp  SessionUserSettings.cpp
src/cpp/session/include/session/: SessionModuleContext.hpp  SessionOptions.hpp  SessionUserSettings.hpp
src/cpp/session/include/session/projects/: SessionProjects.hpp
src/cpp/session/modules/: SessionCodeSearch.cpp  SessionFilesListingMonitor.cpp  SessionFilesListingMonitor.hpp  SessionHTMLPreview.cpp  SessionHelp.cpp  SessionPackages.R  SessionPackages.cpp  SessionPosixShell.cpp  SessionSVN.cpp  SessionSource.cpp  SessionWorkbench.cpp
src/cpp/session/modules/learning/: SessionLearning.cpp
src/cpp/session/modules/tex/: SessionCompilePdf.cpp  SessionSynctex.cpp  SessionSynctex.hpp
src/cpp/session/projects/: SessionProjectContext.cpp
src/cpp/session/svnclient/: CMakeLists.txt  SvnClientMain.cpp  SvnClientOptions.cpp
src/gwt/src/org/rstudio/studio/client/application/: DesktopFrame.java  DesktopHooks.java
src/gwt/src/org/rstudio/studio/client/common/synctex/: Synctex.java
src/gwt/src/org/rstudio/studio/client/server/remote/: RemoteServer.java
src/gwt/src/org/rstudio/studio/client/workbench/: Workbench.java  WorkbenchContext.java
src/gwt/tools/: sync-ace-commits
(+6 files in other folders)
